[workspace]
resolver = "2"
members = [
    "crates/bolt-proto",
    "crates/bolt-crypto",
    "crates/bolt-log",
    "crates/bolt-server",
    "crates/bolt-client",
    "bin/bolt",
    "bin/boltd",
]

[workspace.package]
version     = "1.0.0-dev"
edition     = "2021"
authors     = ["Bolt Protocol"]
license     = "MIT"

[workspace.dependencies]
# Internal crates
bolt-proto  = { path = "crates/bolt-proto" }
bolt-crypto = { path = "crates/bolt-crypto" }
bolt-log    = { path = "crates/bolt-log" }
bolt-server = { path = "crates/bolt-server" }
bolt-client = { path = "crates/bolt-client" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# QUIC transport
quinn   = "0.11"
rustls  = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen   = "0.13"

# Serialization
serde   = { version = "1", features = ["derive"] }
bincode = "1"

# Error handling
thiserror = "2"
anyhow    = "1"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Crypto / keys
snow         = "0.9"
x25519-dalek = "2"
sha2         = "0.10"
rand         = "0.8"
base64       = "0.22"
zeroize      = "1"
ring         = "0.17"

# Bytes / IO
bytes = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Progress bar
indicatif = "0.17"

# Unix / PTY
nix = { version = "0.28", features = ["ioctl", "signal", "term", "process", "fs"] }

# Windows ConPTY
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

# Rsync delta sync
fast_rsync = "0.2"

# Filesystem
walkdir = "2"

# Config file
toml = "0.8"

# Home directory
dirs = "5"

# Shell completion
clap_complete = "4"

# Compression
zstd = "0.13"
