[package]
name    = "bolt-client"
version.workspace = true
edition.workspace = true

[dependencies]
bolt-proto     = { workspace = true }
bolt-crypto    = { workspace = true }
bolt-transport = { workspace = true }
bolt-session   = { workspace = true }
bolt-log       = { workspace = true }

tokio     = { workspace = true }
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
sha2      = { workspace = true }
base64    = { workspace = true }
bytes     = { workspace = true }
walkdir   = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
