[package]
name    = "bolt-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror    = { workspace = true }
anyhow       = { workspace = true }
snow         = { workspace = true }
x25519-dalek = { workspace = true }
rand         = { workspace = true }
base64       = { workspace = true }
zeroize      = { workspace = true }
