[package]
name    = "bolt-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow    = { workspace = true }
rustls    = { workspace = true }
rcgen     = { workspace = true }
quinn     = { workspace = true }
rand      = { workspace = true }
base64    = { workspace = true }
zeroize   = { workspace = true }
serde     = { workspace = true }
bincode   = { workspace = true }
sha2      = { workspace = true }
ring      = { workspace = true }
dirs      = { workspace = true }
