[package]
name    = "bolt-server"
version.workspace = true
edition.workspace = true

[dependencies]
bolt-proto  = { workspace = true }
bolt-crypto = { workspace = true }
bolt-log    = { workspace = true }

quinn     = { workspace = true }
rustls    = { workspace = true }
tokio     = { workspace = true }
anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
sha2       = { workspace = true }
bytes      = { workspace = true }
fast_rsync = { workspace = true }
toml       = { workspace = true }
dirs       = { workspace = true }
zstd       = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
