[package]
name    = "bolt-transport"
version.workspace = true
edition.workspace = true

[dependencies]
bolt-proto  = { workspace = true }
bolt-crypto = { workspace = true }
bolt-log    = { workspace = true }

tokio     = { workspace = true }
thiserror = { workspace = true }
anyhow    = { workspace = true }
tracing   = { workspace = true }
bytes     = { workspace = true }
